# Django-course

./: .gitignore  README.md  final_project_requirements.md  mini_project.md  pyproject.toml  work.md
.github/workflows/: django-test-ci.yml
admin/: django_admin_homework.md
admin/project/articles/: admin.py  models.py
admin/project/core/: settings.py
ajax/: homework.md
ajax/project/core/: settings.py  urls.py
ajax/project/shop/: models.py  urls.py  views.py
basic_structure_and_connections/django_project/core/: settings.py  urls.py
cache_and_signals/: homework.md
celery_tasks/: celery_homework_order_task.md
celery_tasks/docs/: celery.md
celery_tasks/project/: Dockerfile  docker-compose.yaml  env.example  requirements.txt
class_based_views/django_project/: pyproject.toml
databases/: ACID_vs_BASE.md  SQL_vs_NoSQL.md  queries.md
forms/: pyproject.toml
git/: homework.md
logging/: bug_tracker_homework.md
mail/: homework.md
mail/project/core/: settings.py  (+1 more)
middleware/docs/: README_django_middleware_UA.md
poetry/: Tutorial.md
poetry/django-project-demo/: pyproject.toml
poetry/my_django_proj/: pyproject.toml
poetry/my_django_proj/core/: settings.py
queries/: pyproject.toml
rest_framework/: homework.md
rest_framework/K8S/: homework_K8S.md
rest_framework/project/: .dockerignore  Dockerfile  docker-compose.yaml  env.example  requirements.txt
templates_paginator/: pyproject.toml
uml/: Sequence.md  Theory.md  Use_cases.md
uv/: Tutorial.md
uv/my_django_proj/: main.py  pyproject.toml
uv/uv-project-demo/: main.py  pyproject.toml
(+187 files in other folders)
