[project]
name = "django-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.3.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "redis>=7.4.0",
    "uvicorn>=0.42.0",
]
